syntax = "proto3";

package twirp.example.card;
option go_package = "proto/rpcproto";

import "google/protobuf/timestamp.proto";

service BoardService {
    rpc CreateBoard(BoardCreateInput) returns (Board);
    rpc UpdateBoard(BoardUpdateInput) returns (Board);
    rpc AddMember(AddMemberInput) returns (Board);
    rpc AddLabel(AddLabelInput) returns (Board);
    rpc GetByID(GetByIDInput) returns (Board);
    rpc GetPage(GetPageInput) returns (BoardPage);
}

service CardService {
    rpc Create(CardInput) returns (Card);
    rpc Update(CardUpdateInput) returns (Card);
    rpc MoveList(CardMoveListInput) returns (Card);
    rpc GetByID(GetByIDInput) returns (Card);
    rpc GetPage(GetPageInput) returns (CardPage);
    rpc GetAll(CardFilter) returns (CardList);
}

message BoardCreateInput {
    string title = 1;
    repeated AddMemberInput members = 2;
    repeated AddLabelInput labels = 3;
    repeated AddListInput lists = 4;
}

message BoardUpdateInput {
    string id = 1;
    string title = 2;
}

message GetByIDInput {
    string id = 1;
}

message AddMemberInput {
    string user_id = 1;
}

message AddLabelInput {
    string name = 1;
    string color = 2;
}

message AddListInput {
    string name = 1;
    int32 position = 2;
}

message GetPageInput {
    int32 page = 1;
    int32 limit = 2;
}

message BoardPage {
    repeated Board items = 1;
    int32 total = 2;
}

message Board {
    string id = 1;
    string code = 2;
    string title = 3;
    repeated BoardMember members = 4;
    repeated BoardList lists = 5;
    repeated BoardLabel labels = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message BoardMember {
    string id = 1;
    string board_id = 2;
    string user_id = 3;
    google.protobuf.Timestamp created_at = 4;
}

message BoardList {
    string id = 1;
    string board_id = 2;
    string public_id = 3;
    string title = 4;
    int32 position = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message BoardLabel {
    string id = 1;
    string board_id = 2;
    string slug = 3;
    string title = 4;
    string color = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CardFilter {
    repeated string ids = 1;
}

message CardMoveListInput {
    string cardID = 1;
    string listID = 2;
}

message CardUpdateInput {
    string id = 1;
    CardInput input = 2;
}

message CardInput {
    string list_id = 1;
    string board_id = 2;
    string title = 3;
    string description = 4;
    string due_date_from = 5;
    string due_date_until = 6;
    bool due_date_is_completed = 7;
    repeated AddMemberInput members = 8;
}

message CardList {
    repeated Card cards = 1;
}

message CardPage {
    repeated Card items = 1;
    int32 total = 2;
}

message Card {
    string id = 1;
    string list_id = 2;
    string public_id = 3;
    string title = 4;
    string description = 5;
    google.protobuf.Timestamp due_date_from = 6;
    google.protobuf.Timestamp due_date_until = 7;
    google.protobuf.Timestamp due_date_completed_at = 8;
    repeated CardMember members = 9;
    repeated CardAttachment attachments = 10;
    repeated CardLabel labels = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp updated_at = 13;
    google.protobuf.Timestamp deleted_at = 14;
}

message CardMember {
    string id = 1;
    string card_id = 2;
    string user_id = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CardAttachment {
    string id = 1;
    string card_id = 2;
    string link_name = 3;
    string file_type = 4;
    string file_url = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CardLabel {
    string id = 1;
    string card_id = 2;
    string label_id = 3;
    google.protobuf.Timestamp created_at = 4; 
}